--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -1,3 +1,31 @@
+# Key bindings
+# By default, command key bindings are prefixed by Ctrl+b. For example, 
+# to vertically split a window type Ctrl+b %.
+# After splitting a window into multiple panes, a pane can be resized by 
+# the hitting prefix key (e.g. Ctrl+b) and, while continuing to hold Ctrl, 
+# press Left/Right/Up/Down. Swapping panes is achieved in the same manner, 
+# but by hitting o instead of a directional key.
+# Key bindings may be changed with the bind and unbind commands in 
+# tmux.conf. For example, the default prefix binding of Ctrl+b can be 
+# changed to Ctrl+a by adding the following commands in your 
+# configuration file: 
+# unbind C-b
+# set -g prefix C-a
+# bind C-a send-prefix
+
+# reload config file (change file location to your the tmux.conf you want to use)
+bind r source-file ~/.config/tmux/tmux.conf
+
+# Use Alt-arrow keys to switch panes
+bind -n M-Left select-pane -L
+bind -n M-Right select-pane -R
+bind -n M-Up select-pane -U
+bind -n M-Down select-pane -D
+
+# Shift arrow to switch windows
+bind -n S-Left previous-window
+bind -n S-Right next-window
+
 # Terminal emulator window titles
 # If you SSH into a host in a tmux window, you will notice the window 
 # title of your terminal emulator remains to be user@localhost rather 
@@ -34,3 +62,29 @@ bind -T root WheelDownPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "se
 #    bind -t vi-copy    WheelDownPane page-down
 #    bind -t emacs-copy WheelUpPane   page-up
 #    bind -t emacs-copy WheelDownPane page-down
+
+### EYE CANDY
+# Default status bar bg=colour235
+set -g default-terminal "tmux-256color"
+
+# Set custom color for the tmux big clock
+set -g clock-mode-colour '#CF074C'
+
+# color status bar
+set -g status-style fg=brightyellow,bg='#CF074C'
+
+# color of message bar
+set -g message-style fg=white,bold,bg=green
+
+# highlight current window
+setw -g window-status-style fg=brightyellow
+setw -g window-status-current-style fg=brightyellow,blink
+#setw -g window-status-separator #[fg=cyan],\uE0B0\uE0B1
+
+# set color of active pane
+set -g pane-border-style fg='#CF074C',bg=black
+set -g pane-active-border-style fg='#CF074C',bg=black
+
+# status bar content
+set -g status-right '#[fg=brightgreen]<#[fg=brightyellow]#(whoami)@#(hostname)#[fg=brightgreen]><#[fg=brightyellow]%H:%M#[fg=brightgreen]>'
+set -g status-interval 1
