--- a/config/xfce4/panel/whiskermenu-5.rc
+++ b/config/xfce4/panel/whiskermenu-5.rc
@@ -1,5 +1,5 @@
 favorites=firefox-esr.desktop,xfce4-terminal-emulator.desktop,xfce4-file-manager.desktop,gimp.desktop,org.qbittorrent.qBittorrent.desktop,code.desktop,xfce4-taskmanager.desktop,vlc.desktop,xfce4-screenshooter.desktop
-recent=grub-customizer.desktop,virt-manager.desktop,redshift-gtk.desktop,xfce4-screenshooter.desktop,org.qbittorrent.qBittorrent.desktop,vlc.desktop,org.xfce.Parole.desktop,blueman-manager.desktop,google-chrome.desktop,gimp.desktop
+recent=virt-manager.desktop,grub-customizer.desktop,redshift-gtk.desktop,xfce4-screenshooter.desktop,org.qbittorrent.qBittorrent.desktop,vlc.desktop,org.xfce.Parole.desktop,blueman-manager.desktop,google-chrome.desktop,gimp.desktop
 button-title=💠️
 button-icon=xfce4-whiskermenu
 button-single-row=false
