--- a/.conkyrc
+++ b/.conkyrc
@@ -68,7 +68,7 @@ ${voffset 2}${color1}Load : ${alignr}${color3} $loadavg
 ${voffset 10}${color1}${font :size=14:bold}CPU ${hr 2}${font}
 ${voffset 5}${color1}Name : ${color3}$alignr${execi 6000 cat /proc/cpuinfo | grep 'model name' | sed -e 's/model name.*: //'| uniq | cut -c 1-16}
 ${voffset 2}${color1}Freq : ${color3}${freq_g} GHz$alignr${color1}Usage : ${color3}${cpu}%
-${voffset 2}${color1}Temp : ${color2}${execi 5 sensors | grep Tdie: | cut -c 16-19}C ${alignr}${color3}(${machine})
+${voffset 2}${color1}Temp : ${color2}${execi 5 sensors | grep Tctl: | cut -c 16-19}C ${alignr}${color3}(${machine})
 #$color3${cpubar 4 cpu1}$color
 $color2${cpugraph 000000 F08B18}$color
 #------------+
