--- a/config/starship.toml
+++ b/config/starship.toml
@@ -1,24 +1,131 @@
-# Inserts a blank line between shell prompts
-add_newline = true
+#                                 
 
-# Replace the "❯" symbol in the prompt with "➜"
-# [character]                            # The name of the module we are configuring is "character"
-# success_symbol = "[➜](bold green)"     # The "success_symbol" segment is being set to "➜" with the color "bold green"
+format = """
+[](fg:#0969da bg:#0969da)\
+$username\
+[](fg:#0969da bg:#eac54f)\
+$directory\
+[](fg:#eac54f bg:#e44729)\
+$git_branch\
+$git_status\
+[ ](fg:#e44729)\
+"""
 
-# Use custom format
-# format = """
-# [┌───────────────────>](bold green)
-# [│](bold green)$directory$rust$package
-# [└─>](bold green) """
+right_format = """
+[](fg:#8250df)\
+$time\
+$all
+$character
+"""
 
-# Use custom format 2
+[username]
+show_always = true
+style_user = "fg:#ffffff bg:#0969da"
+style_root = "fg:#ffffff bg:#0969da"
+format = '[$user ]($style)'
+disabled = false
+
+[directory]
+style = "fg:#000000 bg:#eac54f"
+format = "[ $path ]($style)"
+disabled = false
+
+[directory.substitutions]
+"Documents" = " "
+"Downloads" = " "
+"Music" = " "
+"Pictures" = " "
+
+[git_branch]
+symbol = ""
+style = "fg:#ffffff bg:#e44729"
+format = '[ $symbol $branch ]($style)'
+disabled = false
+
+[git_status]
+style = "fg:#ffffff bg:#e44729"
+format = '[$all_status$ahead_behind ]($style)'
+disabled = false
+
+# Start languages and tools #
+
+[c]
+symbol = ""
+style = "fg:#ffffff bg:#840a2c"
+format = '[ $symbol ($version) ]($style)'
+disabled = false
+
+[kubernetes]
+style = "fg:#ffffff bg:#326ce5"
+format = '[ on ﴱ ($user on )($cluster in )$context \($namespace\) ]($style)'
+disabled = false
+
+[gcloud]
+symbol = " "
+style = "fg:#ffffff bg:#0f9d58"
+format = '[ on $symbol $account(@$domain)(\($region\)) ]($style) '
+# format = '[ on $symbol account@company.iam.gserviceaccount.com(\($region\)) ]($style) ' # for testing purposes
+disabled = false
+
+[golang]
+symbol = ""
+style = "fg:#ffffff bg:#007d9c"
+format = '[ $symbol ($version) ]($style)'
+disabled = false
+
+[java]
+symbol = ""
+style = "fg:#ffffff bg:#007396"
+format = '[ $symbol ($version) ]($style)'
+disabled = false
+
+[lua]
+symbol = ""
+style = "fg:#ffffff bg:#000080"
+format = '[ $symbol ($version) ]($style)'
+disabled = false
+
+[nodejs]
+symbol = ""
+style = "fg:#ffffff bg:#5fa04e"
+format = '[ $symbol ($version) ]($style)'
+disabled = false
+
+[package]
+symbol = ""
+style = "fg:#ffffff bg:#cb3837"
+format = '[ $symbol ($version) ]($style)'
+disabled = false
+
+[php]
+symbol = ''
+style = "fg:#ffffff bg:#4F5B93"
+format = '[ $symbol ($version) ]($style)'
+disabled = false
+
+[python]
+symbol = ''
+style = "fg:#000000 bg:#ffdf76"
+format = '[ $symbol ($version) ]($style)'
+disabled = false
+
+[rust]
+symbol = ""
+style = "fg:#ffffff bg:#a72145"
+format = '[ $symbol ($version) ]($style)'
+disabled = false
+
+# End languages and tools #
+
+[time]
+disabled = false
+time_format = "%R" # Hour:Minute Format
+style = "fg:#ffffff bg:#8250df"
+format = '[  $time ]($style)'
+
+[cmd_duration]
+style = "fg:#000000 bg:yellow"
+format = "[ took $duration ]($style)"
+
 [character]
-success_symbol = "[└─>](bold green)"
-# error_symbol = "[✖](bold red)"
-error_symbol = "[└─>](bold red)"
-
-# Wait 10 milliseconds for starship to check files under the current directory.
-# scan_timeout = 10
-
-# Disable the blank line at the start of the prompt
-# add_newline = false
+format = " $symbol"
