--- a/.conkyrc
+++ b/.conkyrc
@@ -109,32 +109,50 @@ ${top name 5} ${goto 180}${top cpu 5}${alignr}${top mem 5}
 ${voffset 10}${color1}${font :size=14:bold}MEMORY ${hr 2}${font}
 ${voffset 5}${color1}Used: ${color3}$mem ($memperc%)${color1}${alignr}Free: ${color3}$memeasyfree
 ${color2}${membar}
+# ${voffset 5}${color1}Used: ${color3}$swap ($swapperc%)${color1}${alignr}Free: ${color3}$swapfree
+# ${color2}${swapbar}
 ${voffset 5}${color1}Name${goto 180}MEM%${alignr}MEM
 ${color2}${top_mem name 1} ${goto 180}${top_mem mem 1}${alignr}${top_mem mem_res 1}${color3}
 ${top_mem name 2} ${goto 180}${top_mem mem 2}${alignr}${top_mem mem_res 2}
 ${top_mem name 3} ${goto 180}${top_mem mem 3}${alignr}${top_mem mem_res 3}
 ${top_mem name 4} ${goto 180}${top_mem mem 4}${alignr}${top_mem mem_res 4}
 ${top_mem name 5} ${goto 180}${top_mem mem 5}${alignr}${top_mem mem_res 5}
-#RAM ${alignr}$mem / $memmax ($memperc%)
-#$color3${membar 4}$color
-#SWAP ${alignr}$swap / $swapmax ($swapperc%)
-#$color3${swapbar 4}$color
-#Highest CPU $alignr CPU% MEM%
-#${top name 1}$alignr${top cpu 1}${top mem 1}
-#${top name 2}$alignr${top cpu 2}${top mem 2}
-#${top name 3}$alignr${top cpu 3}${top mem 3}
-#Highest MEM $alignr CPU% MEM%
-#${top_mem name 1}$alignr${top_mem cpu 1}${top_mem mem 1}
-#${top_mem name 2}$alignr${top_mem cpu 2}${top_mem mem 2}
-#${top_mem name 3}$alignr${top_mem cpu 3}${top_mem mem 3}
+# RAM ${alignr}$mem / $memmax ($memperc%)
+# $color3${membar 4}$color
+# SWAP ${alignr}$swap / $swapmax ($swapperc%)
+# $color3${swapbar 4}$color
+# Highest CPU $alignr CPU% MEM%
+# ${top name 1}$alignr${top cpu 1}${top mem 1}
+# ${top name 2}$alignr${top cpu 2}${top mem 2}
+# ${top name 3}$alignr${top cpu 3}${top mem 3}
+# Highest MEM $alignr CPU% MEM%
+# ${top_mem name 1}$alignr${top_mem cpu 1}${top_mem mem 1}
+# ${top_mem name 2}$alignr${top_mem cpu 2}${top_mem mem 2}
+# ${top_mem name 3}$alignr${top_mem cpu 3}${top_mem mem 3}
 #------------+
 # GPU
 #------------+
 # ${voffset 10}${color1}${font :size=14:bold}VIDEO ${hr 2}${font}
-# ${voffset 5}${color1}GPU :$alignr${color3}${execi 6000 hwinfo --gfxcard | grep "Model"}
+# ${voffset 5}${color1}GPU :$alignr${color3}${execi 6000 /usr/sbin/hwinfo --gfxcard | grep "Model"}
 # ${color1}Driver :$alignr${color3}${execi 6000 glxinfo | grep "OpenGL version" |cut -c52-70}
 # ${color1}Utilization :$alignr${color3}${exec nvidia-smi -i 0 | grep % | cut -c 61-63} %
 # ${color1}VRAM Utilization :$alignr${color3}${exec nvidia-smi -i 0| grep % | cut -c 37-40} MB
+
+# ${voffset 2}${color1}${font :size=8:bold}GPU INFO ${hr 1}${font}
+# ${color1}Graphics cards:
+# ${execi 6000 /usr/sbin/hwinfo --gfxcard | grep "Model"| cut -c 24-64}
+# Driver: ${execi 6000 glxinfo | grep "OpenGL version" |cut -c52-70}
+# ${goto 20}Utilization: ${execi 2 cat /sys/class/drm/card0/device/gpu_busy_percent} % 
+# ${execgraph "radeontop -d- -l1 | grep -o 'gpu [0-9]\{1,3\}' | cut -c 5-10"  000000 FF6347}
+# # Frequency Selected: 
+# # ${execi 2 cat /sys/class/drm/card0/device/pp_dpm_sclk}
+# Fan Control: ${execi 2 sensors | grep "fan1"}
+# Temps:
+# ${goto 20} edge:${if_match "${exec sensors | grep "edge" |cut -c16-17}" <="70"}$color3 ${else} $color4 ${if_match "${exec sensors|grep "edge" |cut -c16-17}" >="99"}$color2 ${endif} ${endif} ${exec sensors|grep "edge"|cut -c16-22} $color1 ${goto 140} junction:${if_match "${exec sensors | grep "junction" |cut -c16-17}" <="70"}$color3 ${else} $color4 ${if_match "${exec sensors|grep "junction" |cut -c16-17}" >="99"}$color2 ${endif} ${endif} ${exec sensors|grep "junction"|cut -c14-22} $color1 $color1 ${goto 290} mmem:${if_match "${exec sensors | grep "mem" |cut -c16-17}" <="70"}$color3 ${else} $color4 ${if_match "${exec sensors|grep "mem" |cut -c16-17}" >="99"}$color2 ${endif} ${endif} ${exec sensors|grep "mem"|cut -c14-22} $color1
+# consumption: ${exec sensors | grep "PPT"|cut -c10-}
+# free VRAM: ${exec glxinfo | grep 'dedicated'| cut -c48-60} of ${exec glxinfo | grep 'Dedicated'| cut -c29-60} ${goto 290}VRAM Usage: ${execi 5 radeontop -d- -l1 | grep -o 'vram [0-9]\{1,3\}' | cut -c 5-10}%
+# ${execgraph "radeontop -d- -l1 | grep -o 'vram [0-9]\{1,3\}' | cut -c 5-10" 000000 FF6347}
+
 
 #------------+
 # DISK
