--- a/.conkyrc
+++ b/.conkyrc
@@ -48,12 +48,10 @@ conky.config = {
 };
 
 conky.text = [[
-
 ${font Zekton:style=Bold:pixelsize=20}${alignc}${time %H:%M:%S}${font Zekton:size=8}
 ${font Zekton:style=Bold:pixelsize=10}${alignc}${time %d/%m/%Y}${font Zekton:size=8}
 ${font Zekton:style=Bold:pixelsize=10}${alignc}${time day %j week %U}${font Zekton:size=8}
 #${font Zekton:style=Bold:pixelsize=10}${alignc}${time %A - %d/%m/%Y%n}${font Zekton:size=8}
-
 ${font Zekton:style=Bold:pixelsize=16}${alignc} ₍ᐢ.  ̫.ᐢ₎ ${font Zekton:size=8}
 #------------+
 # INFO
@@ -61,11 +59,26 @@ ${font Zekton:style=Bold:pixelsize=16}${alignc} ₍ᐢ.  ̫.ᐢ₎ ${font Zekton
 ${color1}${font :size=14:bold}SYSTEM ${hr 2 }${font}
 ${voffset 5}${color1}OS :$alignr${color3}${execi 6000 lsb_release -d | grep 'Descr'|awk {'print $2 " " $3" " $4" " $5'}}
 ${voffset 2}${color1}Kernel :$alignr${color3} $kernel
-${voffset 2}${color1}Uptime :$alignr${color3} $uptime
-${voffset 2}${color1}Hostname : $alignr${color3} $nodename
+${voffset 2}${color1}Uptime :${color3} $uptime $alignr${color1}Hostname :${color3} $nodename
 ${voffset 2}${color1}Processes : ${alignr}${color3} $processes ($running_processes running)
 ${voffset 2}${color1}Load : ${alignr}${color3} $loadavg
-
+#------------+
+#GPU
+#------------+
+${voffset 10}${color1}${font :size=14:bold}GPU ${hr 2}${font}
+${voffset 5}${color1}Name : ${color3}$alignr Radeon RX 590 8GB
+${voffset 2}${color1}Freq : ${color3}${execi 1 cat /sys/class/drm/card0/device/pp_dpm_sclk | grep \* | cut -d\   -f2}$alignr${color1}Usage : ${color3}${execi 1 cat /sys/class/drm/card0/device/gpu_busy_percent}%
+${voffset 2}${color1}Temp : ${color2}${execi 5 sensors | grep edge: | cut -c 16-19}C ${alignr}${color1}Driver: ${color3}${execi 6000 glxinfo | grep "OpenGL version" |cut -c52-70}
+${voffset 2}${color1}Fan : ${color2}${execi 5 sensors | grep "fan1" | cut -c14-17} RPM ${alignr}${color1}Power: ${color3}${execi 6000 sensors | grep PPT | cut -c14-21}
+#${voffset 2}$color2${execgraph "radeontop -d- -l1 | grep -o 'gpu [0-9]\{1,3\}' | cut -c 5-10"  000000 FF6347}
+${voffset 2}$color2${execgraph "radeontop -d- -l1 | grep -o 'gpu [0-9]\{1,3\}' | cut -c 5-10"  000000 F08B18}
+${voffset 10}${color1}VRAM ${stippled_hr 3 3}
+#${voffset 2}${color1}${font :size=8:bold}VRAM INFO ${hr 1}${font}
+#free VRAM: ${exec glxinfo | grep 'dedicated'| cut -c48-60} of ${exec glxinfo | grep 'Dedicated'| cut -c29-60}
+${voffset 2}${color1}Used: ${color3}${execi 5 radeontop -d- -l1 | grep -o 'vram [0-9]\{1,3\}' | cut -c 5-10}%${alignr}${color1}Free : ${color3}${exec glxinfo | grep 'dedicated'| cut -c48-60}
+${voffset 2}${color2}${execbar "radeontop -d- -l1 | grep -o 'vram [0-9]\{1,3\}' | cut -c 5-10"}
+### GRAPH
+#${execgraph "radeontop -d- -l1 | grep -o 'vram [0-9]\{1,3\}' | cut -c 5-10" 000000 FF6347}
 #------------+
 #CPU
 #------------+
@@ -91,7 +104,6 @@ ${voffset 2}${color1}11${goto 25}${color3}${cpu cpu11}%${goto 55}${voffset -5}${
 #${voffset 10}${color1}${font :size=14:bold}TEMPS ${hr 2}${font}
 #${voffset 5}${color1}CPU : ${color3}${execi 5 sensors | grep Tdie: | cut -c 16-19}°C$alignr${color1}NVME : ${color3}${execi 5 nvme smart-log /dev/nvme0n1 | grep '^temperature' | cut -d ":" -f 2 | cut -d " " -f 2}°C
 #${voffset 2}${color1}GPU : ${color3}${nvidia temp}°C$alignr${color1}HDD :${color3}${execi 5 hddtemp /dev/sda1 | cut -d ":" -f 3}
-
 #------------+
 # PROCESSES
 #------------+
@@ -99,10 +111,9 @@ ${voffset 10}${color1}${font :size=14:bold}PROCESSES ${hr 2}${font}
 ${voffset 5}${color1}Name${goto 180}CPU%${alignr}MEM%
 ${color2}${top name 1} ${goto 180}${top cpu 1}${alignr}${top mem 1}${color3}
 ${top name 2} ${goto 180}${top cpu 2}${alignr}${top mem 2}
-${top name 3} ${goto 180}${top cpu 3}${alignr}${top mem 3}
-${top name 4} ${goto 180}${top cpu 4}${alignr}${top mem 4}
-${top name 5} ${goto 180}${top cpu 5}${alignr}${top mem 5}
-
+# ${top name 3} ${goto 180}${top cpu 3}${alignr}${top mem 3}
+# ${top name 4} ${goto 180}${top cpu 4}${alignr}${top mem 4}
+# ${top name 5} ${goto 180}${top cpu 5}${alignr}${top mem 5}
 #------------+
 # MEMORY
 #------------+
@@ -114,9 +125,10 @@ ${color2}${membar}
 ${voffset 5}${color1}Name${goto 180}MEM%${alignr}MEM
 ${color2}${top_mem name 1} ${goto 180}${top_mem mem 1}${alignr}${top_mem mem_res 1}${color3}
 ${top_mem name 2} ${goto 180}${top_mem mem 2}${alignr}${top_mem mem_res 2}
-${top_mem name 3} ${goto 180}${top_mem mem 3}${alignr}${top_mem mem_res 3}
-${top_mem name 4} ${goto 180}${top_mem mem 4}${alignr}${top_mem mem_res 4}
-${top_mem name 5} ${goto 180}${top_mem mem 5}${alignr}${top_mem mem_res 5}
+# ${top_mem name 3} ${goto 180}${top_mem mem 3}${alignr}${top_mem mem_res 3}
+# ${top_mem name 4} ${goto 180}${top_mem mem 4}${alignr}${top_mem mem_res 4}
+# ${top_mem name 5} ${goto 180}${top_mem mem 5}${alignr}${top_mem mem_res 5}
+# 
 # RAM ${alignr}$mem / $memmax ($memperc%)
 # $color3${membar 4}$color
 # SWAP ${alignr}$swap / $swapmax ($swapperc%)
@@ -130,14 +142,8 @@ ${top_mem name 5} ${goto 180}${top_mem mem 5}${alignr}${top_mem mem_res 5}
 # ${top_mem name 2}$alignr${top_mem cpu 2}${top_mem mem 2}
 # ${top_mem name 3}$alignr${top_mem cpu 3}${top_mem mem 3}
 #------------+
-# GPU
+# GPU OLD
 #------------+
-# ${voffset 10}${color1}${font :size=14:bold}VIDEO ${hr 2}${font}
-# ${voffset 5}${color1}GPU :$alignr${color3}${execi 6000 /usr/sbin/hwinfo --gfxcard | grep "Model"}
-# ${color1}Driver :$alignr${color3}${execi 6000 glxinfo | grep "OpenGL version" |cut -c52-70}
-# ${color1}Utilization :$alignr${color3}${exec nvidia-smi -i 0 | grep % | cut -c 61-63} %
-# ${color1}VRAM Utilization :$alignr${color3}${exec nvidia-smi -i 0| grep % | cut -c 37-40} MB
-
 # ${voffset 2}${color1}${font :size=8:bold}GPU INFO ${hr 1}${font}
 # ${color1}Graphics cards:
 # ${execi 6000 /usr/sbin/hwinfo --gfxcard | grep "Model"| cut -c 24-64}
@@ -152,8 +158,6 @@ ${top_mem name 5} ${goto 180}${top_mem mem 5}${alignr}${top_mem mem_res 5}
 # consumption: ${exec sensors | grep "PPT"|cut -c10-}
 # free VRAM: ${exec glxinfo | grep 'dedicated'| cut -c48-60} of ${exec glxinfo | grep 'Dedicated'| cut -c29-60} ${goto 290}VRAM Usage: ${execi 5 radeontop -d- -l1 | grep -o 'vram [0-9]\{1,3\}' | cut -c 5-10}%
 # ${execgraph "radeontop -d- -l1 | grep -o 'vram [0-9]\{1,3\}' | cut -c 5-10" 000000 FF6347}
-
-
 #------------+
 # DISK
 #------------+
@@ -185,7 +189,7 @@ ${voffset 10}${color1}${font :size=14:bold}NETWORK ${hr 2}${font}
 #------------+
 #NETWORK ${hr 1}${color}
 #$gw_iface:
-${voffset 5}${color3}Down ${downspeed enp8s0}/s ${alignr}Up ${upspeed enp8s0}/s
-${color2}${downspeedgraph enp8s0 40,130 000000 F08B18 -l} ${alignr}${upspeedgraph enp8s0 40,130 000000 F08B18 -l}$color
-Total ${totaldown enp8s0} ${alignr}Total ${totalup enp8s0}
+${voffset 5}${color3}Down ${downspeed enp9s0}/s ${alignr}Up ${upspeed enp9s0}/s
+${color2}${downspeedgraph enp9s0 40,130 000000 F08B18 -l} ${alignr}${upspeedgraph enp9s0 40,130 000000 F08B18 -l}$color
+Total ${totaldown enp9s0} ${alignr}Total ${totalup enp9s0}
 ]];
