--- a/config/neofetch/config.conf
+++ b/config/neofetch/config.conf
@@ -10,14 +10,16 @@ print_info() {
     prin "┌─────────\n Hardware Information \n─────────┐"
     info " ​ ​ 󰌢 " model
     info " ​ ​ 󰍛 " cpu
-    info " ​ ​ 󰘚 " gpu
+    # info " ​ ​ 󰘚 " gpu
+    prin " ​ ​ 󰘚       AMD ATI Radeon RX590 Sapphire Pulse"
 #    info " ​ ​  " disk
+   prin " ​ ​       BTRFS" 
     info " ​ ​ 󰑭" memory
     info " ​ ​ 󰍹 " resolution
 #    info " ​ ​ 󱈑 " battery 
     prin "├─────────\n Software Information \n─────────┤"
 #    info " ​ ​  " users
-    info " ​ ​  " distro
+    info " ​ ​  " distro
 # Just get your distro's logo off nerdfonts.com
     info " ​ ​  " kernel
 #    info " ​ ​  " de
@@ -29,9 +31,9 @@ print_info() {
 #    info " ​ ​  󰉼 " theme
 #    info " ​ ​  󰀻 " icons
     info " ​ ​ 󰊠 " packages 
-#    info " ​ ​  󰅐 " uptime
-#    info " ​ ​   " gpu_driver  # Linux/macOS only
-#    info " ​ ​  " cpu_usage
+    info " ​ ​  󰅐 " uptime
+    info " ​ ​   " gpu_driver  # Linux/macOS only
+    info " ​ ​  " cpu_usage
 #    info " ​ ​ 󰝚 " song
     # [[ "$player" ]] && prin "Music Player" "$player"
 #    info " ​ ​   " local_ip
@@ -56,15 +58,15 @@ cpu_brand="off"
 cpu_speed="off"
 cpu_cores="logical"
 cpu_temp="off"
-gpu_brand="off"
-gpu_type="all"
+gpu_brand="on"
+gpu_type="dedicated"
 refresh_rate="on"
 gtk_shorthand="on"
 gtk2="on"
 gtk3="on"
 public_ip_host="http://ident.me"
 public_ip_timeout=2
-disk_show=('/')
+disk_show=('/home')
 music_player="vlc"
 song_format="%artist% - %title%"
 song_shorthand="off"
