--- a/kitty/.config/kitty/current-theme.conf
+++ b/kitty/.config/kitty/current-theme.conf
@@ -1,6 +1,6 @@
 background            #000000
 foreground            #00a595
-cursor                #bbbbbb
+cursor                #50D06E
 selection_background  #00a48c
 color0                #000000
 color8                #545454
