--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -252,7 +252,7 @@ font_size 13.0
 
 #: Text cursor customization {{{
 
-# cursor #cccccc
+# cursor #50D06E
 
 #: Default text cursor color. If set to the special value none the
 #: cursor will be rendered with a "reverse video" effect. Its color
@@ -264,7 +264,7 @@ font_size 13.0
 #: some themes set this value, so if you want to override it, place
 #: your value after the lines where the theme file is included.
 
-# cursor_text_color #111111
+# cursor_text_color #F08B18
 
 #: The color of text under the cursor. If you want it rendered with
 #: the background color of the cell underneath instead, use the
@@ -273,7 +273,7 @@ font_size 13.0
 #: so if you want to override it, place your value after the lines
 #: where the theme file is included.
 
-# cursor_shape block
+cursor_shape block
 
 #: The cursor shape can be one of block, beam, underline. Note that
 #: when reloading the config this will be changed only if the cursor
@@ -284,7 +284,7 @@ font_size 13.0
 #: the cursor shape to beam at shell prompts. You can avoid this by
 #: setting shell_integration to no-cursor.
 
-# cursor_shape_unfocused hollow
+cursor_shape_unfocused hollow
 
 #: Defines the text cursor shape when the OS window is not focused.
 #: The unfocused cursor shape can be one of block, beam, underline,
@@ -314,12 +314,12 @@ font_size 13.0
 #: uses extra power as it means the screen is redrawn multiple times
 #: per blink interval. See also, cursor_stop_blinking_after.
 
-# cursor_stop_blinking_after 15.0
+cursor_stop_blinking_after 15.0
 
 #: Stop blinking cursor after the specified number of seconds of
 #: keyboard inactivity. Set to zero to never stop blinking.
 
-# cursor_trail 0
+cursor_trail 1
 
 #: Set this to a value larger than zero to enable a "cursor trail"
 #: animation. This is an animation that shows a "trail" following the
@@ -335,7 +335,7 @@ font_size 13.0
 #: cursor_trail_start_threshold to control when a cursor trail is
 #: started.
 
-# cursor_trail_decay 0.1 0.4
+cursor_trail_decay 0.1 0.4
 
 #: Controls the decay times for the cursor trail effect when the
 #: cursor_trail is enabled. This option accepts two positive float
@@ -1252,7 +1252,7 @@ hide_window_decorations yes
 
 #: The foreground and background colors.
 
-background_opacity 0.70
+background_opacity 0.90
 
 #: The opacity of the background. A number between zero and one, where
 #: one is opaque and zero is fully transparent. This will only work if
@@ -1295,7 +1295,7 @@ background_opacity 0.70
 #: platform implements it, so use with care. Currently supported on
 #: macOS and KDE.
 
-# background_image /home/$USER/Pictures/wallpapers/source_material/black-the-great-wave-of-coffee.jpg
+background_image /home/ina/Pictures/wallpapers/source_material/black-the-great-wave-of-coffee.jpg
 
 #: Path to a background image. Must be in PNG/JPEG/WEBP/TIFF/GIF/BMP
 #: format.
@@ -1686,7 +1686,7 @@ background_tint_gaps -10
 #: special value of ask means that kitty will ask before opening the
 #: link when clicked.
 
-# shell_integration enabled
+shell_integration enabled no-cursor
 
 #: Enable shell integration on supported shells. This enables features
 #: such as jumping to previous prompts, browsing the output of the
