--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -68,6 +68,7 @@ bind -T root WheelDownPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "se
 # # Default status bar bg=colour235
 set -g default-terminal "tmux-256color"
 set-option -g status-position top
+set -g pane-border-lines double
 #
 # # Set custom color for the tmux big clock
 # set -g clock-mode-colour '#CF074C'
